--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,327 @@
  * All your custom CSS should go into this file
  */
 
-body {
-   padding-top: 60px;
+
+/* Added */
+
+@font-face {
+    font-family: 'archermedium';
+    src: url('../font/archer-medium-pro-webfont.eot');
+    src: url('../font/archer-medium-pro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/archer-medium-pro-webfont.woff') format('woff'),
+         url('../font/archer-medium-pro-webfont.ttf') format('truetype'),
+         url('../font/archer-medium-pro-webfont.svg#archermedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+h3, h4
+{
+   margin: 0;
+}
+img
+{
+   padding: 1em;
+}
+a:hover
+{
+   text-decoration: none;
+   /* IE 8 */
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+
+   /* IE 5-7 */
+   filter: alpha(opacity=80);
+
+   /* Netscape */
+   -moz-opacity: 0.8;
+
+   /* Safari 1.x */
+   -webkit-opacity: 0.8;
+   
+   /*Opera*/
+   -o-opacity:0.8;
+   /* Good browsers */
+   opacity: 0.8;
+   
+   -webkit-transition: 1.5s ease;
+   -moz-transition: 1.5s ease;
+   -o-transition: 1.5s ease;
+   -ms-transition: 1.5s ease;
+   transition: 1.5s ease;
+}
+.btn
+{
+   border-radius: 0;
+}
+.btn-info
+{
+   background-color: #00aeef !important;
+   margin: 1em;
+}
+.order-button
+{
+   margin-bottom: .3em;
+}
+.price
+{
+   color: #00aeef;
+}
+.homeprice
+{
+   color: #1fb7cf;
+   font-size: 2em;
+}
+.row
+{
+   margin-left: 0;
+   margin-right: 0;
+}
+.nav-pills a {
+   color: #34353b;
+}
+.nav-pills > li > a:hover {
+   background-color: #04a8e6;
+   color: white;
+}
+.selected
+{
+   background-color: #04a8e6;
+}
+.selected a
+{
+   color: white;
+}
+.title
+{
+   background: #353b3f url(../img/background.png) no-repeat 0 0;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+.nav
+{
+   display: block;
+   margin-left: 5em;
+   margin-top: 2em !important;
+   text-align: center;
+}
+.logo {
+   float: left;
+}
+.nav-pills
+{
+   float: right;
+   margin-top: 11px;
+   margin-bottom: 10px;
+   font-size: 1.2em;
+}
+.centernav
+{
+    float: none;
+    margin: 0 auto;
+    width: 1150px;
+      margin-top: 15px;
+   margin-bottom: 10px;
+}
+.nav .navlinks
+{
+   text-align: right;
+}
+.subheading
+{
+   padding-bottom: 1em;
+}
+.contentarea {
+   padding-bottom: 5em;
+   margin-top: 2em;
+   padding-top: 3em;
+}
+.tagline
+{
+   font-family: "archermedium", slab-serif !important;
+   color: #34353b !important;
+   text-align: center;
+   color: white;
+   margin-top: 0.8em;
+   margin-bottom: 0.8em;
+}
+.featuredboxes
+{
+   color: white;
+   padding: 1em;
+}
+.featuredboxes .col-md-2
+{
+   text-align: center;
+}
+.featured-box-subtitle
+{
+   color: #34353b;   
+}
+.namesubtag
+{
+   color: #72737f !important;
+}
+
+.avatar
+{
+   border-radius:100%;
+}
+.curator
+{
+   text-align: center;
+}
+.curator img
+{
+   display: block;
+   margin-right: auto;
+   margin-left: auto;
+}
+.box-subtitle
+{
+   color: black;
+}
+.box-curator
+{
+   color: black;
+}
+.box-price
+{
+   color: #1fb7cf;
+   font-size: 1.75em;
+}
+.namesubtag
+{
+   color: #bcbbbb;
+}
+.table-responsive
+{
+   padding-left: 6em;
+   padding-right: 6em;
+}
+.selectedperson
+{
+   border-radius: 3px;
+   background-color: #eee;
+   margin-top: 3em;
+   padding-left: 1em;
+   padding-right: 1em;
+}
+.selectedperson img
+{
+   display: block;
+   margin-right: auto;
+   margin-left: auto;
+}
+.btn
+{
+   font-size: 1.5em;
+}
+.viewmore
+{
+   display: block;
+   margin: 1em auto;
+   margin-bottom: 3em;
+}
+.aboutbox
+{
+   margin-top: 2em;
+   background-color: #eee;
+   padding: 2em;
+}
+.aboutbox h3:nth-child(2)
+{
+   margin-top: 1em;
+}
+.categories
+{
+   background-color: #eee;
+}
+.table
+{
+   text-align: center;
+}
+.pastBoxes img
+{
+   padding: 1em;
+}
+.pastBoxes
+{
+   text-align: center;
+}
+.pastboxes-captions
+{
+   text-align: center;  
+}
+.pages
+{
+   text-align: center;
+}
+footer
+{
+   margin-top: 10em;
+   background-color: #eee; 
+   height: auto;
+}
+footer div
+{
+   padding: 2em;
+   display: inline;
+}
+footer a
+{
+   color: #34353b;
+   text-decoration: none;
+}
+footer ul li:first-child
+{
+
+   font-weight: bold;
+}
+
+footer ul li:nth-child(2)
+{
+   font-weight: bold;
+   color: #1fb7cf;
+}
+.made-with-love
+{
+   font-weight: normal !important;
+}
+footer ul li a
+{
+   color: inherit;
+}
+.copyrightcol li:nth-child(2)
+{
+   color: #34353b;
+}
+.footer-logo
+{
+   display: block;
+   margin: 0 auto;
+}
+.borderhere
+{
+   border: 2px red solid
+}
+@media only screen and (max-width: 1086px) {
+    #footer
+    {
+        display: none;
+    }
+   .nav
+   {
+      margin-left: 0 !important;
+   }
+}
+
+@media only screen and (max-width: 1150px) {
+   .centernav
+   {
+    float: none;
+    margin: 0 auto;
+    width: 90%;
+   }
 }
