--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -107,9 +107,19 @@ a:hover
    margin-top: 2em !important;
    text-align: center;
 }
-.logo {
+.logo
+{
    float: left;
+   transition: all 1s ease-in-out 0s;
 }
+
+a#rotator img:hover { 
+-webkit-transform: rotate(360deg); 
+-moz-transform: rotate(360deg); 
+-o-transform: rotate(360deg);
+-ms-transform: rotate(360deg); 
+}
+
 .nav-pills
 {
    float: right;
